--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@tanstack/react-router": "^1.123.2",
     "@tanstack/react-router-devtools": "^1.121.34",
     "antd": "^5.26.2",
+    "antd-style": "^3.7.1",
     "axios": "^1.10.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.6.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
